--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <script src="res/loading.js"></script>
     <canvas id="gameCanvas" width="480" height="720"></canvas>
-    <script src="cocos2d-html5/CCBoot.js"></script>
+    <script src="cocos2d-js-v3.13.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
