--- a/index.html
+++ b/index.html
@@ -2,24 +2,11 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>EnderDot</title>
-    <!--<link rel="icon" type="image/GIF" href="res/favicon.ico"/>-->
-    <style type="text/css">
-        html {
-            background-color: white;
-        }
-        body {
-            margin: 0;
-            padding: 0;
-            -moz-user-select: none;
-            -webkit-user-select: none;
-            -ms-user-select: none;
-        }
-    </style>
+    <title>Dot</title>
 </head>
 <body>
     <script src="res/loading.js"></script>
-    <canvas id="gameCanvas" width="480" height="720"></canvas>
+    <canvas id="gameCanvas"></canvas>
     <script src="cocos2d-js-v3.13.js"></script>
     <script src="main.js"></script>
 </body>
